--- a/Android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/title_search" />
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_dashboard"
@@ -12,13 +12,8 @@
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_collections"
-        android:icon="@drawable/ic_collections_black_24dp"
-        android:title="@string/title_collections" />
-
-    <item
-        android:id="@+id/navigation_library"
-        android:icon="@drawable/ic_library_black_24dp"
-        android:title="@string/title_library" />
+        android:id="@+id/navigation_notifications"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_notifications" />
 
 </menu>
