--- a/app/src/main/res/layout/fragment_monster.xml
+++ b/app/src/main/res/layout/fragment_monster.xml
@@ -41,5 +41,33 @@
             app:layout_constraintTop_toBottomOf="@+id/name"
             tools:text="Tiny fey, neutral good" />
 
+        <ImageView
+            android:id="@+id/divider1"
+            android:layout_width="0dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/section_divider"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_section_divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/meta" />
+
+        <TextView
+            android:id="@+id/armor_class"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider1"
+            tools:text="Armor Class 15" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
