--- a/Android/app/src/main/res/layout/fragment_monster.xml
+++ b/Android/app/src/main/res/layout/fragment_monster.xml
@@ -69,5 +69,18 @@
             app:layout_constraintTop_toBottomOf="@+id/divider1"
             tools:text="Armor Class 15" />
 
+        <TextView
+            android:id="@+id/hit_points"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/armor_class"
+            tools:text="Hit Points 1 (1d4 - 1)" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
