--- a/app/src/main/res/layout/fragment_monster.xml
+++ b/app/src/main/res/layout/fragment_monster.xml
@@ -82,5 +82,18 @@
             app:layout_constraintTop_toBottomOf="@+id/armor_class"
             tools:text="Hit Points 1 (1d4 - 1)" />
 
+        <TextView
+            android:id="@+id/speed"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/hit_points"
+            tools:text="10 ft., fly 30 ft." />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
