--- a/app/src/main/res/layout/fragment_monster.xml
+++ b/app/src/main/res/layout/fragment_monster.xml
@@ -318,5 +318,18 @@
             app:layout_constraintTop_toBottomOf="@+id/divider3"
             tools:text="Saving Throws" />
 
+        <TextView
+            android:id="@+id/skills"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/saving_throws"
+            tools:text="Skills" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
